# OpenMelee

./: .envrc  .gitignore  .woodpecker.yml  Cargo.toml  README.md  flake.nix  ishiiruka.patch  module.nix
assets/static/: main.css
assets/templates/: 404.html.tera  base.html.tera  index.html.tera  login.html.tera  macros.html.tera  navbar.html.tera  profile.html.tera  register.html.tera  unauthorized.html.tera
migrations/: 20220907173201_create_user.up.sql
migrations/2022-09-07-173201_create_users/: up.sql
src/: auth.rs  game.rs  lib.rs  main.rs  matchmaking.rs  models.rs  schema.rs  user.rs  webserver.rs
