[package]
name = "slippi-re"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.4.0"
chrono = "0.4.22"
diesel = { version = "2.0.0", features = ["sqlite"] }
encoding_rs = "0.8.31"
enet = "0.3.0"
figment = { version = "0.10.7", features = [ "toml", "env" ] }
itertools = "0.10.3"
rand = "0.8.5"
serde = { version = "1.0.144", features = [ "derive" ] }
serde_json = "1.0.85"
serde_repr = "0.1.9"
tokio = { version = "1.21.0", features = [ "full" ] }
unicode-normalization = "0.1.21"
wana_kana = "2.1.0"
warp = "0.3.2"

[[bin]]
name = "slippi-re"
path = "src/main.rs"
