[package]
name = "slippi-re"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
axum-sqlx-tx = { version = "0.4.0", features = [ "sqlite", "runtime-tokio-native-tls" ] }
bson = "2.4.0"
chrono = "0.4.22"
clap = { version = "3.2.22", features = [ "derive" ] }
encoding_rs = "0.8.31"
enet = "0.3.0"
figment = { version = "0.10.7", features = [ "toml", "env" ] }
itertools = "0.10.3"
mime_guess = "2.0.4"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = [ "json" ] }
rust-embed = "6.4.1"
serde = { version = "1.0.144", features = [ "derive" ] }
serde_json = "1.0.85"
serde_repr = "0.1.9"
sqlx = { version = "0.6.2", features = [ "sqlite", "runtime-tokio-native-tls" ] }
tera = "1.17.1"
tokio = { version = "1.21.0", features = [ "full" ] }
unicode-normalization = "0.1.21"
validator = { version = "0.16.0", features = [ "derive" ] }
wana_kana = "2.1.0"

[[bin]]
name = "slippi-re"
path = "src/main.rs"
